static/styles.css
html, body {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100vh;
    font-family: "Inter";
    background-color: rgb(140, 0, 200);
    color: white;
}

.content {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

input[type=text] {
    padding: 12px 12px;
    font-size: 20px;
    background-color: white;
    font-family: Inter;
    font-weight: bold;
    width: 200px;
    border: 0;
    transition: 0.2s;
}

input[type=text]:focus {
    outline: 3px solid rgb(210, 210, 210);
}

input[type=submit] {
    background-color: black;
    color: white;
    font-family: Inter;
    font-size: 18px;
    font-weight: bold;
    border: 0;
    padding: 10px 0px;
    cursor: pointer;
    transition: 0.1s;
    border-radius: 15px;
}

input[type=submit]:hover {
    background-color: rgba(34, 34, 34)
}

input[type=submit]:active {
    transform: scale(0.9);
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
    padding: 0;
}

h1 {
    --outline-color: black;
    font-size: 46px;

    text-shadow:
    -1px -1px 0 var(--outline-color),
    1px -1px 0 var(--outline-color),
    -1px 1px 0 var(--outline-color),
    1px 1px 0 var(--outline-color),
    -2px 0 0 var(--outline-color),
    2px 0 0 var(--outline-color),
    0 2px 0 var(--outline-color),
    0 -2px 0 var(--outline-color);
}

p {
    font-size: 18px;
    font-weight: 500;
}

button {
    font-family: Inter;
    font-weight: bold;
    color: white;
    font-size: 20px;
    padding: 10px 20px;
    border: 0;
    background-color: black;
    cursor: pointer;
    transition: 0.1s;
}

button:hover {
    background-color: rgb(50, 50, 50);
}

button.beautiful {
    font-size: 26px;
    padding: 20px 40px;
}

button.beautiful:hover {
    transform: rotate(10deg) scale(1.5);
}

#noneSection {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-info {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.game-info h1 {
    margin-top: auto;
    margin-left: auto;
    margin-right: auto;
}

.game-info div {
    display: flex;
    align-items: center;
    margin-top: auto;
    margin-left: auto;
    margin-bottom: 20px;
    gap: 10px;
    height: 45px;
}

canvas {
    background-color: white;
    border-radius: 15px;
    border: 5px solid rgb(230, 230, 230);
}

#drawingSection div {
    display: flex;
    align-items: center;
    gap: 10px;
    border-radius: 15px;
}

#drawingSection div button {
    margin-left: auto;
    color: black;
    background-color: rgb(240, 240, 240);
    border-radius: 5px;
    transition: 0.1s;
}

#drawingSection div button:hover {
    filter: brightness(0.95);
}

#drawingSection div div {
    background-color: rgba(0, 0, 0, 0.1);
    height: 40px;
}

.draw-part {
    border: 2px solid rgba(255, 255, 255, 0.2);
    padding: 0 10px;
}

.draw-parts {
    border: 2px solid rgba(255, 255, 255, 0.1);
    padding: 0 10px;
}

#timer {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 50px;
    width: 50px;
    background-color: white;
    color: black;
    font-weight: bold;
    border-radius: 50%;

    top: 10px;
    right: 10px;
    cursor: default;
    user-select: none;
    animation: 0.2s popin;
}

@keyframes popin {
    from {
        transform: scale(2);
    }

    to {
        transform: scale(1);
    }
}

